# fontpair

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
docs/: usage.md
examples/basic/: example_usage.py
src/fontpair/: __init__.py  analyzer.py  categorizer.py  cli.py  db.py  exporter.py  models.py  recommender.py  scanner.py  scorer.py
tests/: test_analyzer.py  test_categorizer.py  test_cli.py  test_exporter.py  test_recommender.py  test_scanner.py  test_scorer.py
