[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "fontpair"
version = "0.1.0"
description = "Local font pairing recommender -- scan installed fonts and suggest harmonious typographic combinations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "fuku", email = "fuku@fuku.dev" },
]
keywords = ["font", "typography", "pairing", "cli", "design", "font-recommendation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Designers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Fonts",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "fonttools>=4.0",
    "Pillow>=10.0",
]

[project.scripts]
fontpair = "fontpair.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
